--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,7 +1090,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    return sqrt((first_neighbor[4]-first_neighbor[]))"
+    "    return sqrt((first_neighbor['avenue']-first_neighbor['avenue']))"
    ]
   },
   {
