--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,7 +1090,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    return sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street']))"
+    "    return sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street'] -))"
    ]
   },
   {
