--- a/index.ipynb
+++ b/index.ipynb
@@ -1088,6 +1088,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
+    "    import ma\n",
     "    return sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street'] - second_neighbor['street']**2))"
    ]
   },
