--- a/index.ipynb
+++ b/index.ipynb
@@ -1088,7 +1088,8 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    return first_neighbor['street'] - second_neighbor['street']"
+    "    import math\n",
+    "    return math.sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street'] - second_neighbor['street']**2))"
    ]
   },
   {
