Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1135,7 +1135,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    import math\n",
+    "    return math.sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street'] "
    ]
   },
   {
