--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,12 +1090,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    "
+    "    return abs(first_neighbor['avenue'] - second_neighbor['avenue'])"
    ]
   },
   {
