--- a/index.ipynb
+++ b/index.ipynb
@@ -1141,8 +1141,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    import math\n",
-    "    return math.sqrt((first_neighbor['avenue'] - second_neighbor['avenue'])**2 + (first_neighbor['street'] "
+    "    return "
    ]
   },
   {
