Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1321,7 +1321,8 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
-    "    for neighbor in neighbo"
+    "    for neighbor in neighbors:\n",
+    "        list.append(distance)"
    ]
   },
   {
