--- a/index.ipynb
+++ b/index.ipynb
@@ -1322,7 +1322,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
     "    for neighbor in neighbors:\n",
-    "        list.append(map"
+    "        list.append(distance_with_"
    ]
   },
   {
