Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1322,7 +1322,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    list = []\n",
     "    for neighbor in neighbors:\n",
-    "        list.append(distance_with_"
+    "        list.append(distance_with_neighbor(first_neighbor, )"
    ]
   },
   {
