Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1320,9 +1320,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    list = []\n",
-    "    for neighbor in neighbors:\n",
-    "        list.append(distance_with_neighbor(first_neighbor, neighbors))"
+    "    return list(filter(lambda ))"
    ]
   },
   {
