--- a/index.ipynb
+++ b/index.ipynb
@@ -1320,7 +1320,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return list(filter(lambda ))"
+    "    list = []\n",
+    "    for neighbor in neighbors:\n",
+    "        list.append(distance_with_neighbor(first_neighbor, neighbors))"
    ]
   },
   {
