--- a/index.ipynb
+++ b/index.ipynb
@@ -1318,10 +1318,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    list = []\n",
-    "    for neighbor in neighbors:\n",
-    "        list.append(distance_with_neighbor(first_neighbor, neighbors))\n",
-    "    return list"
+    "   remaining_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor), remaining_neighbors))"
    ]
   },
   {
